--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -3,8 +3,8 @@
 @import "core/index";
 @import "mixin/index";
 
-//@import "components/common/head";
-//@import "components/common/foot";
+@import "components/common/head";
+@import "components/common/foot";
 //@import "components/common/menu";
 //公共样式 start
 
