--- a/assets/sass/core/index.scss
+++ b/assets/sass/core/index.scss
@@ -2,3 +2,66 @@
 @import "utility";
 //@import "reset";
 //@import "grid";
+
+
+//公共样式 start
+html,body{
+  background-color: $body-bg;
+  -webkit-font-smoothing: antialiased;
+}
+body{
+
+}
+.navbar-default{
+  background-color: #eef1f6;
+  border-top: none;
+  border-radius: 0;
+  border-bottom: 1px solid $global-border;
+  margin: 0;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover
+{
+  border-bottom: 2px solid #20a0ff;
+  background-color: #eef1f6;
+  color: #20a0ff;
+}
+.content_head{
+  p{
+    margin: 0;
+  }
+  padding: 20px;
+  .content_head_title{
+    .icon_area{
+      padding: 2px 4px 6px 6px;
+      border-radius: 5px;
+      text-align: center;
+      background-color: #7F8DE1;
+      float: left;
+      margin-right: 10px;
+      .glyphicon{
+        color: #fff;
+        font-size: 24px;
+      }
+    }
+    .text_title{
+      float: left;
+      p{
+        margin-top: 6px;
+      }
+    }
+    &.dropdown{
+      .text_title{
+        p{
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+.content_content{
+  background-color:#fff;
+  border-top:1px solid $global-border;
+  border-bottom:1px solid $global-border;
+  padding: 15px 20px;
+}
+//公共样式 end
