--- a/assets/sass/variable/variable.scss
+++ b/assets/sass/variable/variable.scss
@@ -47,7 +47,7 @@ $global-secondary: #ffeded;
 // body
 // -----------------------------------------------------------------------------
 
-$body-bg:               $white;
+$body-bg:               #f5f5f5;//#f3f7fa;
 $text-color:            $gray-dark;
 
 
