--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -5,6 +5,8 @@
 
 @import "components/common/head";
 @import "components/common/foot";
+@import "components/product_list";
+@import "components/order_list";
 //@import "components/common/menu";
 //公共样式 start
 
