--- a/view/index/index.html
+++ b/view/index/index.html
@@ -25,6 +25,7 @@
     <script src="../../assets/lib/bootstrap-treeview.js"></script>
     <script src="../../assets/lib/placeholder/2.3.1/jquery.placeholder.min.js"></script>
     <link rel="stylesheet" href="../../assets/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="http://www.jq22.com/demo/jquery-butt-150401203937/css/buttons.css">
     <link rel="stylesheet" href="../../assets/css/index.css">
 </head>
 <body ng-app="app" >
@@ -43,37 +44,116 @@
             </div>
         </div>
         <div class="content_content">
-            <b>日期选择</b>
-            <form class="form-horizontal " role="form">
-                <div class="form-group">
-                    <label for="firstname" class="col-sm-2 control-label">日期</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control" id="firstname" placeholder="请输入名字" ng-model="date" readonly>{{date}}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="lastname" class="col-sm-2 control-label">姓</label>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control" id="lastname" placeholder="请输入姓">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-5">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox">请记住我
-                            </label>
+            <b>表单</b>
+            <div class="form clearfix" style="border: 1px solid #eee;padding-top: 20px;">
+                <form class="form-horizontal " role="form" style="width: 500px;">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-2 control-label">选择日期</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="firstname" placeholder="请输入名字" ng-model="date" readonly>{{date}}
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">登录</button>
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-2 control-label">名字</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="lastname" placeholder="请输入姓">
+                        </div>
                     </div>
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-3 control-label">选择类型啊啊啊</label>
+                        <div class="col-sm-9">
+                            <select class="form-control ">
+                                <option value="">类型1</option>
+                                <option value="">类型2</option>
+                                <option value="">类型3</option>
+                            </select>
+                        </div>
+
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox">请记住我
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default " ng-click="modal()">膜态框</button>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default ">登录</button>
+                        </div>
+                    </div>
+                </form>
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h4 class="modal-title" id="myModalLabel">模态框（Modal）标题</h4>
+                            </div>
+                            <div class="modal-body">在这里添加一些文本</div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">关闭</button>
+                                <button type="button" class="btn btn-primary btn-sm">提交更改</button>
+                            </div>
+                        </div><!-- /.modal-content -->
+                    </div><!-- /.modal -->
                 </div>
-            </form>
+            </div>
+
             <b>树形选择插件</b>
-            <div id="tree"></div>
+            <div class="tree clearfix">
+                <div id="tree" class="col-sm-4"></div>
+            </div>
+
+            <b>商品列表</b>
+            <ul class="product_list">
+                <li class="">
+                    <div class="pro_checkbox"><input type="checkbox"></div>
+                    <img ng-src="{{date|origin_pic}}" alt="" class="pro_img">
+                    <div class="pro_text">
+                        <p class="pro_title">撒打算打算打算的</p>
+                        <p class="pro_des">qwewqeqweqwewqeqweqw</p>
+                    </div>
+                </li>
+                <li class="">
+                    <div class="pro_checkbox"><input type="checkbox"></div>
+                    <img ng-src="{{date|origin_pic}}" alt="" class="pro_img">
+                    <div class="pro_text">
+                        <p class="pro_title">撒打算打算打算的</p>
+                        <p class="pro_tag label_list"><span class="label label-default">默认标签</span><span class="label label-default">默认标签</span></p>
+                        <p class="pro_des">qwewqeqweqwewqeqweqw</p>
+                    </div>
+                </li>
+            </ul>
+            <b>订单列表</b>
+            <ul class="order_list">
+                <li class="">
+                    <div class="order_checkbox"><input type="checkbox"></div>
+                    <div class="order">
+                        <div class="order_code">
+                            <div class="orderTime mr30">2017-05-16 16:10:58</div>
+                            <div class="orderNum">订单号：14949222582094282</div>
+                            <div class="order_status">订单状态：<span >正在交易</span></div>
+                        </div>
+                        <div class="order_detail">
+                            <img ng-src="{{date|origin_pic}}" alt="" class="order_img">
+                            <div class="order_text">
+                                <p class="order_title">撒打算打算打算的</p>
+                                <p class="order_des">qwewqeqweqwewqeqweqw</p>
+                            </div>
+                            <div class="order_price">成交价格：<b>$3220</b></div>
+                        </div>
+                    </div>
+
+                </li>
+            </ul>
         </div>
     </div>
     <div foot></div>
@@ -83,5 +163,5 @@
 <script src="../../assets/components/common/head.js"></script>
 <script src="../../assets/components/common/menu.js"></script>
 <script src="../../assets/components/common/foot.js"></script>
-<script src="../../assets/js/index/index.js"></script>
+<script src="../../assets/js/controler/index/index.js"></script>
 </html>
