--- a/view/index/index.html
+++ b/view/index/index.html
@@ -25,6 +25,7 @@
     <script src="../../assets/lib/bootstrap-treeview.js"></script>
     <script src="../../assets/lib/placeholder/2.3.1/jquery.placeholder.min.js"></script>
     <link rel="stylesheet" href="../../assets/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="../../assets/lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://www.jq22.com/demo/jquery-butt-150401203937/css/buttons.css">
     <link rel="stylesheet" href="../../assets/css/index.css">
 </head>
@@ -55,13 +56,13 @@
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
-        <div content-head dropdown="false" icon-class="glyphicon-th">
+        <div content-head dropdown="false" icon-class="fa-th">
             <div class="text_title">
                 <p>店铺管理</p>
             </div>
             <a type="button" class="fr btn btn-primary btn-sm mt10" href="javascript:;">筛选条件</a>
         </div>
-        <div content-head dropdown="true" icon-class="glyphicon-th">
+        <div content-head dropdown="true" icon-class="fa-shopping-bag">
             <div class="text_title">
                 <p>商品管理</p>
                 <div class="dropdown">
