--- a/assets/components/common/content_head.html
+++ b/assets/components/common/content_head.html
@@ -1,6 +1,6 @@
 <div class="content_head clearfix">
     <div class="content_head_title" ng-class="{dropdown_:dropdown=='true'}">
-        <div class="icon_area" ng-class="{mt10:dropdown=='true'}"><span class="glyphicon" ng-class="iconClass"></span></div>
+        <div class="icon_area" ng-class="{mt10:dropdown=='true'}"><i class="fa" ng-class="iconClass" aria-hidden="true"></i></div>
         <div class="transclude" ng-transclude>
 
         </div>
