--- a/assets/sass/core/index.scss
+++ b/assets/sass/core/index.scss
@@ -33,14 +33,14 @@ body{
   .content_head_title{
     position: relative;
     .icon_area{
-      padding: 2px 4px 6px 6px;
+      padding: 5px 5px ;
       border-radius: 5px;
       text-align: center;
       background-color: #7F8DE1;
       //float: left;
       position: absolute;
       margin-right: 10px;
-      .glyphicon{
+      .fa{
         color: #fff;
         font-size: 24px;
       }
