--- a/assets/sass/core/index.scss
+++ b/assets/sass/core/index.scss
@@ -20,13 +20,13 @@ body{
   .content_head_title{
     position: relative;
     .icon_area{
-      padding: 5px 5px ;
+      padding: 3px 5px ;
       border-radius: 5px;
       text-align: center;
       background-color: #7F8DE1;
       //float: left;
       position: absolute;
-      margin-right: 10px;
+      //margin-right: 10px;
       .fa{
         color: #fff;
         font-size: 24px;
